fix gap between cards

--- a/styles.css
+++ b/styles.css
@@ -33,12 +33,13 @@ body {
 .body-container {
   display: flex;
   flex-wrap: wrap;
-  
+  gap: 40px;
+  margin-left: 40px;
 }
 
 .card {
   border: 2px solid #ccc;
-  width: 100px;
+  width: 250px;
   height: fit-content;
 }
 
